Fixed non-subnaved spacing with CSS instead of HTML [#163204240]

--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -329,6 +329,10 @@ header.header-home-global {
   text-align: center;
   // margin-top: 64px;
   margin-top: 0;
+  
+}
+
+body:not(.has-subnav) {
   @media (min-width: $bp-wide) {
     margin-top: 113px;
   }
@@ -339,4 +343,3 @@ header.header-home-global {
     margin-top: 0;
   }
 }
-
